# drake

./: CMakeLists.txt  WORKSPACE  batch_run.py  build_install  graph.txt  keyframes.txt
cmake/: config.cmake
drake/: BUILD
drake/automotive/: car_sim_lcm_common.cc
drake/common/: eigen_types.h
drake/core/: Path.h.in
drake/examples/PlanarPushing/: BUILD  CMakeLists.txt  demo_dubins_pushing.cc  dubins.cc  dubins.h  dubins_interface.cc  dubins_interface.h  pushing_multi_actions.cc  pushing_multi_actions.h
drake/examples/QPInverseDynamicsForHumanoids/: BUILD  CMakeLists.txt  control_utils.cc  control_utils.h  dummy_integrate.h  example_qp_input_for_valkyrie.cc  example_qp_input_for_valkyrie.h  generic_plan.cc  generic_plan.h  humanoid_status.cc  humanoid_status.h  lcm_utils.cc  lcm_utils.h  manip_plan.cc  manip_plan.h  qp_controller.cc  qp_controller.h  qp_controller1.cc  qp_controller_common.cc  qp_controller_common.h  rigid_body_tree_utils.cc  rigid_body_tree_utils.h  test_gravity_compensation_for_valkyrie.cc  valkyrie_balancing_test.cc  walking_plan.cc  walking_plan.h
drake/examples/QPInverseDynamicsForHumanoids/config/: iiwa.alias_groups  iiwa.id_controller_config  sfeng_iiwa.alias_groups  sfeng_iiwa.id_controller_config  valkyrie.id_controller_config
drake/examples/QPInverseDynamicsForHumanoids/param_parsers/: CMakeLists.txt  id_controller_config.proto  param_parser.cc  param_parser.h
drake/examples/QPInverseDynamicsForHumanoids/param_parsers/test/: param_parser_test.cc  params.id_controller_config
drake/examples/QPInverseDynamicsForHumanoids/plan_eval/: BUILD  generic_plan.cc  generic_plan.h  humanoid_manipulation_plan.cc  humanoid_manipulation_plan.h  humanoid_plan.cc  humanoid_plan.h  humanoid_walking_plan.cc  humanoid_walking_plan.h  manipulator_move_end_effector_plan.cc  manipulator_move_end_effector_plan.h  manipulator_move_joints_plan.cc  manipulator_move_joints_plan.h  manipulator_plan.cc  manipulator_plan.h  manipulator_streaming_plan.cc  manipulator_streaming_plan.h  plan_eval_utils.cc  plan_eval_utils.h
drake/examples/QPInverseDynamicsForHumanoids/plan_eval/test/: generic_plan_test.cc  manipulator_plan_test.cc  plan_eval_utils_test.cc  test_common.h
drake/examples/QPInverseDynamicsForHumanoids/sys2/: CMakeLists.txt  qp_io_utils.cc  qp_io_utils.h  sys2_dummy_val.h  sys2_qp.cc  sys2_qp.h  sys2_qp_diagram_test.cc  sys2_qp_test.cc  sys2_sim.cc
drake/examples/QPInverseDynamicsForHumanoids/system/: BUILD  CMakeLists.txt  clone_only_value.h  discrete_time_plan_eval_system.cc  discrete_time_plan_eval_system.h  humanoid_plan_eval_system.cc  humanoid_plan_eval_system.h  iiwa_controller.h  joint_level_controller_system.cc  joint_level_controller_system.h  kuka_inverse_dynamics_servo.cc  kuka_inverse_dynamics_servo.h  kuka_servo_system.cc  kuka_servo_system.h  manip_plan_eval_system.cc  manip_plan_eval_system.h  manipulator_controller.cc  manipulator_controller.h  manipulator_inverse_dynamics_controller.cc  manipulator_inverse_dynamics_controller.h  manipulator_inverse_dynamics_servo.cc  manipulator_inverse_dynamics_servo.h  manipulator_plan_eval.cc  manipulator_plan_eval.h  manipulator_plan_eval_system.cc  manipulator_plan_eval_system.h  new_manipulator_plan_eval_system.cc  new_manipulator_plan_eval_system.h  plan_eval_base_system.cc  plan_eval_base_system.h  plan_eval_system.cc  plan_eval_system.h  qp_controller_system.cc  qp_controller_system.h  robot_state_decoder_system.cc  robot_state_decoder_system.h  robot_state_msg_to_humanoid_status_system.h  state_to_humanoid_status.h  valkyrie_balancing_controller_system.cc  valkyrie_balancing_system_test.cc  (+2 more)
drake/examples/QPInverseDynamicsForHumanoids/system/test/: humanoid_plan_eval_system_test.cc  manipulator_inverse_dynamics_controller_test.cc  manipulator_plan_eval_system_test.cc  new_manip_plan_eval_test.cc  qp_controller_system_test.cc
drake/examples/QPInverseDynamicsForHumanoids/test/: CMakeLists.txt  iiwa_inverse_dynamics_test.cc  lcm_utils_test.cc  param_parser_test.cc  plan_eval_test.cc  val_sim.cc  valkyrie_balancing_test.cc  valkyrie_qp_inverse_dynamics_controller.cc
drake/examples/QPInverseDynamicsForHumanoids/tests/: CMakeLists.txt  lcm_utils_test.cc  valkyrie_balancing_system_test.cc  valkyrie_balancing_test.cc
drake/lcm/: drake_mock_lcm.cc  drake_mock_lcm.h
drake/lcmtypes/: BUILD  BUILD.bazel  CMakeLists.txt  lcmt_body_acceleration.lcm  lcmt_cartesian_keyframe.lcm  lcmt_cartesian_trajectory.lcm  lcmt_constrained_values.lcm  lcmt_contact_information.lcm  lcmt_contact_state.lcm  lcmt_desired_body_motion.lcm  lcmt_desired_centroidal_momentum_dot.lcm  lcmt_desired_dof_motions.lcm  lcmt_desired_joint_motions.lcm  lcmt_dof_keyframe.lcm  lcmt_dof_trajectory.lcm  lcmt_external_force_torque.lcm  lcmt_iiwa_command.lcm  lcmt_iiwa_status.lcm  lcmt_inverse_dynamics_debug_info.lcm  lcmt_jjz_controller.lcm  lcmt_manipulator_plan_move_end_effector.lcm  lcmt_manipulator_plan_streaming.lcm  lcmt_motion_plan.lcm  lcmt_plan_eval_debug_info.lcm  lcmt_qp_controller_input.lcm  lcmt_qp_controller_input_new.lcm  lcmt_qp_input.lcm  lcmt_robotiq_input.lcm  lcmt_robotiq_output.lcm  lcmt_support_data.lcm  lcmt_whole_body_data.lcm  lcmt_whole_body_data_new.lcm  lcmt_zmp_data.lcm
drake/math/: CMakeLists.txt  continuous_algebraic_riccati_equation.cc  continuous_algebraic_riccati_equation.h
drake/multibody/: CMakeLists.txt  kinematics_results.cc  kinematics_results.h  material_map.h  parser_yaml.cc  parser_yaml.h  (+4 more)
drake/multibody/test/rigid_body_tree/: CMakeLists.txt  parser_yaml_test.cc  two_dof_robot.urdf
drake/systems/sensors/test/accelerometer_test/: CMakeLists.txt  accelerometer_example.cc  accelerometer_example_diagram.cc  accelerometer_example_diagram.h  accelerometer_test.cc  accelerometer_test_logger.cc  accelerometer_test_logger.h
drake/systems/sensors/test/accelerometer_test/sideways_pendulum/: model.config  sideways_pendulum.sdf
examples/image_generator/: BUILD.bazel  image_generator.cc  image_generator.h  main.cc
solvers/: ipopt_solver.cc
tools/: lcmtypes_robotlocomotion.BUILD
(+277 files in other folders)
