add_executable(test_gravity_compensation_for_valkyrie test_gravity_compensation_for_valkyrie.cc qp_controller.cc rigid_body_tree_utils.cc humanoid_status.cc qp_controller1.cc)
target_link_libraries(test_gravity_compensation_for_valkyrie drakeRBSystem drakeOptimization drakeSide)

add_subdirectory("sys2")
